@@ -1,4 +1,3 @@
-- throw out that system calls in fconf2golded and fconf2fidogate
 - route statements which are defined in the middle of several link statements
   are broken, because there is a realloc of config->links! Maybe there are
   more bugs like this in the current sources
